--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "url": "git+https://github.com/Workintech/fsweb-s13-challenge"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "4.18.1",
         "helmet": "5.0.2",
@@ -25,6 +26,7 @@
         "eslint": "8.14.0",
         "jest": "28.1.0",
         "knex-cleaner": "1.3.1",
+        "nodemon": "^2.0.20",
         "supertest": "6.2.3"
     },
     "license": "ISC"
